<resources>
    <string name="app_name">Project Lifecycle Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_detail_1">Detail</string>
    <string name="title_tab_detail_2">Lifecycle</string>
    <string name="sample_note">Pada arsitektur ini dijelasakan flow daripada kegiatan yang akan dilakukan.</string>
    <string name="sample_description">Maecenas vestibulum pulvinar velit, quis volutpat magna. Cras a tincidunt enim, vel tincidunt nisi. Ut commodo quis ante ac vehicula. Praesent sagittis bibendum egestas. Etiam luctus velit sapien, eu placerat massa vehicula sit amet. Morbi ac turpis ac dui placerat luctus. Praesent mattis, diam interdum fermentum mollis, felis nisl laoreet eros, eget dictum tellus felis et metus. Cras sagittis leo vel diam consequat rutrum. Maecenas nisl leo, euismod sed risus sed, venenatis malesuada nisl. Aenean varius mauris nec tempor euismod. Sed sed viverra turpis. Vivamus vitae ante tortor. </string>
    <string name="from">from</string>
    <string name="digital_creative_capital">DIGITAL CREATIVE</string>
    <string name="dataflow_title">Dataflow</string>
    <string name="no_dataflow">No Dataflow</string>
    <string name="there_is_no_dataflow_yet">There is no dataflow yet, please create your dataflow lifecycle</string>
    <string name="architecture">Architecture</string>
    <string name="entity_relationship_diagram">Entity Relationship Diagram</string>
    <string name="data_flow">Data Flow</string>
    <string name="usecase">Usecase</string>
    <string name="scenario_test">Scenario Test</string>
    <string name="data_flow_structure">Data Flow Structure</string>
    <string name="user_journey">User Journey</string>
    <string name="sequence_diagram">Sequence Diagram</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="fill_your_email">Fill your email below</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="make_project">Make Project</string>
    <string name="welcome">Welcome!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="desc_plm">Project Lifecycle Management adalah aplikasi manajement siklus kehidupan dari sebuah project sejak project itu ditentukan dan direncanakan hingga project memasuki tahap pengembangan dan evaluasi.</string>
    <string name="plm_title_space">Project Lifecycle \nManagement</string>
    <string name="diagram">Diagram</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="make_your_project">Make your project</string>
    <string name="name">Name</string>
    <string name="invite_people">Invite people</string>
    <string name="make_task">Make Task</string>
    <string name="weight_1_100">Weight 1–100</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="due_date">Due Date</string>
    <string name="member">Member</string>
    <string name="note">Note</string>
    <string name="make">Make</string>
    <string name="pending">Pending</string>
    <string name="diagram_picture">Diagram Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="register_new_account">Register new account!</string>
    <string name="fill_form_below">Fill form below</string>
    <string name="register_account">Register Account</string>
    <string name="no_usecase">No Usecase</string>
    <string name="no_usecase_longtext">There is no usecase yet, please create your usecase lifecycle</string>
    <string name="example_name">Example name</string>
    <string name="examplerole">exampleRole</string>
    <string name="see_full">See full</string>
    <string name="usecase_1">Usecase 1</string>
    <string name="example_title_project">Proyek KP PLM</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="example_date_start">01/07/2020</string>
    <string name="strip">-</string>
    <string name="example_end_date">01/07/2020</string>
    <string name="end">End</string>
    <string name="due">Due</string>
    <string name="example_due_date">01/07/2020</string>
    <string name="weight">Weight</string>
    <string name="example_number">10</string>
    <string name="action">Action</string>
    <string name="event">Event</string>
    <string name="approve">Approve</string>
    <string name="invite_member">Invite Member</string>
    <string name="role">Role</string>
    <string name="invite">Invite</string>
    <string name="logout">Logout</string>
    <string name="team_member">Team member</string>
    <string name="plus_sign">+</string>
    <string name="expand">Expand</string>
    <string name="task">Task</string>
    <string name="your_project">Your Project</string>
    <string name="plm_logo">PLM_LOGO</string>
    <string name="no_project">No Project</string>
    <string name="home_longtext_no_project">Create your team\'s Lifecycle Management Project or get a lifecycle management project invitation from your team</string>
    <string name="md_example_2words">MD</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
</resources>
