<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/content_fdetail_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/content_fdetail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/example_name"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content_fdetail_tdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_name"
        app:layout_constraintStart_toStartOf="@id/content_fdetail_name"/>

    <TextView
        android:id="@+id/content_fdetail_tstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_tdate"
        app:layout_constraintTop_toBottomOf="@+id/content_fdetail_tdate" />

    <TextView
        android:id="@+id/content_fdetail_datestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="22dp"
        android:text="@string/example_date_start"
        app:layout_constraintBaseline_toBaselineOf="@+id/content_fdetail_tstart"
        app:layout_constraintEnd_toStartOf="@id/strip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/content_fdetail_tstart" />

    <TextView
        android:id="@+id/strip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strip"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/content_fdetail_datestart"
        app:layout_constraintTop_toTopOf="@+id/content_fdetail_datestart"
        tools:layout_editor_absoluteX="173dp"
        app:layout_constraintStart_toEndOf="@id/content_fdetail_datestart"
        app:layout_constraintEnd_toStartOf="@id/content_fdetail_tend"/>

    <TextView
        android:id="@+id/content_fdetail_dateend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/example_end_date"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/content_fdetail_tend"
        app:layout_constraintStart_toEndOf="@+id/content_fdetail_tend" />

    <TextView
        android:id="@+id/content_fdetail_tend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginStart="22dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/strip"
        app:layout_constraintStart_toEndOf="@+id/strip" />

    <TextView
        android:id="@+id/content_fdetail_tdue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_tstart"
        app:layout_constraintTop_toBottomOf="@+id/content_fdetail_tstart" />

    <TextView
        android:id="@+id/content_fdetail_datedue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_due_date"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/content_fdetail_tdue"
        app:layout_constraintEnd_toEndOf="@+id/content_fdetail_datestart"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_datestart" />

    <TextView
        android:id="@+id/content_fdetail_tweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_tdue"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_tdue" />

    <TextView
        android:id="@+id/content_fdetail_cweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_number"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_tweight"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_tweight" />

    <TextView
        android:id="@+id/content_fdetail_tnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_cweight"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_cweight" />

    <TextView
        android:id="@+id/content_fdetail_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sample_note"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@android:color/black"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/content_fdetail_tnote"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_tnote" />

    <TextView
        android:id="@+id/content_fdetail_taction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_note"
        app:layout_constraintStart_toStartOf="@+id/content_fdetail_note" />

    <HorizontalScrollView
        android:id="@+id/content_fdetail_rvaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/content_fdetail_taction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/content_fdetail_bevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorButtonGrey"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/event"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_event_busy_18px"
                app:iconGravity="end"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/content_fdetail_bedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorBlueApps"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_create_18px"
                app:iconGravity="end"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/fdetail_bapprove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorButtonGreen"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/approve"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_create_18px"
                app:iconGravity="end"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/fdetail_bdelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorButtonRed"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_create_18px"
                app:iconGravity="end"/>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>