<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageLifecycle">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pageLif_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/rectangle_indicator"
        android:backgroundTint="@color/colorOrangeApp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/pending"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/pageLif_main_title"
        app:layout_constraintTop_toBottomOf="@+id/pageLif_main_title" />

    <TextView
        android:id="@+id/pageLif_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/architecture"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/pageLif_diagram_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/diagram"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/pageLif_indicator"
        app:layout_constraintTop_toBottomOf="@+id/pageLif_indicator" />

    <ImageView
        android:id="@+id/pageLif_diagram"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/sample_diagram"
        android:contentDescription="@string/diagram_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageLif_diagram_title" />

    <TextView
        android:id="@+id/pageLif_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/pageLif_diagram"
        app:layout_constraintTop_toBottomOf="@id/pageLif_diagram" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pageArchi_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="10dp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageLif_desc_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pageLif_btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBlueApps"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/pageLif_btn_delete"
        app:layout_constraintEnd_toEndOf="@+id/pageLif_btn_delete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pageLif_btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/pageArchi_RV"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pageLif_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:fontFamily="@font/poppins_bold"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:strokeColor="@android:color/black"
        android:textColor="@android:color/black"
        app:backgroundTint="@android:color/white"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>